<resources>
    <string name="app_name">Mood.ly</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="retype_password">Re-type Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="get_started_prompt">Get Started</string>
    <string name="register_prompt">Not a user? <u>Register here</u></string>
    <string name="login_prompt">Already a user? <u>Sign in here</u></string>
    <string name="welcome_msg_one_title">Welcome to Mood.ly</string>
    <string name="welcome_msg_two_title">Store</string>
    <string name="welcome_msg_three_title">Trends</string>
    <string name="welcome_msg_one_sub_title">Keep track of your recent moods</string>
    <string name="welcome_msg_two_sub_title">Store all of your information in one place</string>
    <string name="welcome_msg_three_sub_title">See weekly &amp; monthly trends and pick from many different categories</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="dob">Date of Birth</string>




</resources>