<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAD6C3"
    tools:context=".RegisterActivity" >

    <EditText
        android:id="@+id/lastnameRegister"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_marginTop="8dp"
        android:width="280sp"
        android:autofillHints="username"
        android:background="#80FFFFFF"
        android:ems="10"
        android:hint="@string/lastname"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toTopOf="@+id/loginPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstnameRegister" />

    <EditText
        android:id="@+id/usernameRegister"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_marginTop="8dp"
        android:width="280sp"
        android:autofillHints="username"
        android:background="#80FFFFFF"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toTopOf="@+id/loginPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastnameRegister"
        app:layout_constraintVertical_bias="0.956" />

    <EditText
        android:id="@+id/firstnameRegister"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="8dp"
        android:width="280sp"
        android:autofillHints="username"
        android:background="#80FFFFFF"
        android:ems="10"
        android:hint="@string/firstname"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toTopOf="@+id/lastnameRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moodlyLogo2" />

    <EditText
        android:id="@+id/retypePasswordRegister"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:width="280sp"
        android:background="#80FFFFFF"
        android:ems="10"
        android:hint="@string/retype_password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toTopOf="@+id/dobRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegister" />

    <EditText
        android:id="@+id/passwordRegister"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:width="280sp"
        android:background="#80FFFFFF"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toTopOf="@+id/retypePasswordRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailRegister" />

    <Button
        android:id="@+id/registerButtonRegister"
        android:layout_width="190sp"
        android:layout_height="50sp"
        android:background="@drawable/rounded_edges_button_dark"
        android:onClick="onClick"
        android:text="@string/register_button"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.868" />

    <ImageView
        android:id="@+id/moodlyLogo2"
        android:layout_width="236dp"
        android:layout_height="173dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="Moodly logo"
        app:layout_constraintBottom_toTopOf="@+id/firstnameRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/moodly_logo" />

    <TextView
        android:id="@+id/loginPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="220dp"
        android:clickable="true"
        android:onClick="onClick"
        android:text="@string/register_prompt"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dobRegister" />

    <EditText
        android:id="@+id/emailRegister"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_marginTop="8dp"
        android:width="280sp"
        android:background="#80FFFFFF"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toTopOf="@+id/passwordRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameRegister"
        app:layout_constraintVertical_bias="0.071" />

    <EditText
        android:id="@+id/dobRegister"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:width="280sp"
        android:background="#80FFFFFF"
        android:ems="10"
        android:hint="@string/dob"
        android:inputType="date"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toTopOf="@+id/loginPrompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/retypePasswordRegister"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>